2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-menu.c (select_subtitle_action_callback):
	* src/totem-playlist.c (totem_playlist_select_subtitle_dialog),
	(playlist_select_subtitle_action_callback):
	* src/totem-playlist.h:
	* src/totem-uri.c:
	* src/totem-uri.h:
	* src/totem.c (totem_action_set_mrl_with_warning):
	Patch from Kamil Pawlowski <kamilpe@gmail.com> to allow
	selecting a text subtitle for the currently playing
	movie, from the View menu (Closes: #499463)

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-dnd-menu.c (drag_menu_deactivate_callback),
	(totem_drag_ask):
	* src/totem-playlist.c (drop_cb):
	* src/totem.c (drop_video_cb), (drop_playlist_cb): Use
	GDK_ACTION_DEFAULT instead of 0 for the cancelled drops,
	as pointed out by Robin Stocker <robin@nibor.org>

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (drop_video_cb), (drop_playlist_cb),
	(drag_motion_playlist_cb), (totem_callback_connect):
	Make "ask" drag'n'drop work on the sidebar button as well

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/eggfileformatchooser.[ch]: Add the EggFileFormatChooser
	from bug 440431
	* src/totem-playlist.c (totem_playlist_save_playlist),
	(suffix_match_replace), (format_selection_changed),
	(totem_playlist_save_add_format_chooser),
	(totem_playlist_save_files): Use a better file format chooser,
	- if the extension isn't known, use "PLS"
	- when changing the file type, change the prefix of the saved file
	(Closes: #379608)

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (drop_video_cb): Only show the "Add to playlist"
	menu item on drop when the playlist isn't empty

2008-12-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_add_to_playlist_and_play),
	(totem_get_playlist_length):
	* src/totem-playlist.c (totem_playlist_get_current),
	(totem_playlist_get_last):
	* src/totem-playlist.h:
	* src/totem-session.c (totem_save_state_cb):